...
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/details_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="-245dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
...

    </LinearLayout>

    </android.support.design.card.MaterialCardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/details_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="166dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="1dp"
...
